feat: Add Google OAuth social authentication
- Add Google OAuth integration with Passport.js
- Create SocialAuth entity and repository for storing social auth data
- Update User entity to support social authentication (nullable password fields)
- Add social authentication service and controller
- Create social auth routes for OAuth flow and account management
- Add comprehensive test suite for social authentication
- Remove Facebook and Instagram OAuth (requires review/approval)
- Fix security issues: remove hardcoded URLs and secrets
- Update environment variables and Docker configuration
- Add migration for social_auth table and user table updates
- Fix TypeScript linting errors (replace any types with proper types)

--- a/docker/Dockerfile_migration
+++ b/docker/Dockerfile_migration
@@ -8,10 +8,11 @@ RUN mkdir ~/.npm-global && npm config set cache ~/.npm-global
 
 # Copy only the files needed for migrations
 COPY ../package.json ./
-# COPY ../tsconfig.json ./
+COPY ../tsconfig.json ./
 COPY ../src/migrations/ ./migrations/
+COPY ../src/entities/ ./src/entities/
+COPY ../src/datatypes/ ./src/datatypes/
 COPY ../dataSource.ts ./
-# COPY ../src/entities ./
 
 RUN npm install
 
