--- a/docker/docker-compose-dev.yml
+++ b/docker/docker-compose-dev.yml
@@ -43,6 +43,15 @@ services:
       LOCAL_AUTH_CLIENT_SECRET: ${LOCAL_AUTH_CLIENT_SECRET}
       LOCAL_AUTH_GRANT_TYPE: ${LOCAL_AUTH_GRANT_TYPE}
       LOCAL_AUTH_REDIRECT_URL: ${LOCAL_AUTH_REDIRECT_URL}
+      # Social Authentication
+      BACKEND_URL: ${BACKEND_URL:-http://localhost:3030}
+      FRONTEND_URL: ${FRONTEND_URL:-http://localhost:3000}
+      GOOGLE_CLIENT_ID: ${GOOGLE_CLIENT_ID:-}
+      GOOGLE_CLIENT_SECRET: ${GOOGLE_CLIENT_SECRET:-}
+      FACEBOOK_APP_ID: ${FACEBOOK_APP_ID:-}
+      FACEBOOK_APP_SECRET: ${FACEBOOK_APP_SECRET:-}
+      INSTAGRAM_CLIENT_ID: ${INSTAGRAM_CLIENT_ID:-}
+      INSTAGRAM_CLIENT_SECRET: ${INSTAGRAM_CLIENT_SECRET:-}
     volumes:
       - ../:/app
       - ../node_modules:/app/node_modules
